aligne checkbox-wrapper with select-wrapper, minor page fixes | mh, cs | #144

--- a/packages/components-js/src/components/form/checkbox-wrapper/checkbox-wrapper.scss
+++ b/packages/components-js/src/components/form/checkbox-wrapper/checkbox-wrapper.scss
@@ -25,8 +25,7 @@
 }
 
 :host {
-  display: inline-block;
-  vertical-align: top;
+  display: block;
 }
 
 ::slotted(input) {
@@ -97,63 +96,6 @@
     display: flex;
   }
 
-  &__icon-wrapper {
-    width: p-rem(24px);
-    height: p-rem(24px);
-    display: block;
-    flex-shrink: 0;
-    box-sizing: border-box;
-    border: 1px solid $p-color-theme-light-neutral-contrast-medium;
-    background-color: transparent;
-    transition: border-color $p-animation-hover-duration $p-animation-hover-bezier,
-    background-color $p-animation-hover-duration $p-animation-hover-bezier;
-
-    &--checked {
-      border-color: $p-color-theme-light-neutral-contrast-high;
-      background-color: $p-color-theme-light-neutral-contrast-high;
-    }
-
-    &--checked#{&}--disabled {
-      background-color: $p-color-theme-light-state-disabled;
-    }
-
-    &--checked#{&}--error {
-      background-color: $p-color-theme-light-notification-error;
-    }
-
-    &--checked#{&}--success {
-      background-color: $p-color-theme-light-notification-success;
-    }
-
-    &--disabled {
-      border-color: $p-color-theme-light-state-disabled;
-    }
-
-    &--error {
-      border-width: 2px;
-      border-color: $p-color-theme-light-notification-error;
-    }
-
-    &--success {
-      border-width: 2px;
-      border-color: $p-color-theme-light-notification-success;
-    }
-  }
-
-  &__icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: p-rem(24px);
-    height: p-rem(24px);
-    opacity: 0;
-    transition: opacity $p-animation-hover-duration $p-animation-hover-bezier;
-
-    &--checked {
-      opacity: 1;
-    }
-  }
-
   &__label-text {
     display: inline-block;
     color: $p-color-theme-light-default;
@@ -222,16 +164,72 @@
     }
   }
 
+  &__fake-checkbox {
+    width: p-rem(24px);
+    height: p-rem(24px);
+    display: block;
+    flex-shrink: 0;
+    box-sizing: border-box;
+    background-color: $p-color-theme-light-background;
+    box-shadow: inset 0 0 0 1px $p-color-theme-light-neutral-contrast-medium;
+    transition: box-shadow $p-animation-hover-duration $p-animation-hover-bezier,
+    background-color $p-animation-hover-duration $p-animation-hover-bezier;
+
+    &--checked {
+      box-shadow: inset 0 0 0 1px $p-color-theme-light-neutral-contrast-high;
+      background-color: $p-color-theme-light-neutral-contrast-high;
+    }
+
+    &--checked#{&}--disabled {
+      background-color: $p-color-theme-light-state-disabled;
+    }
+
+    &--checked#{&}--error {
+      background-color: $p-color-theme-light-notification-error;
+    }
+
+    &--checked#{&}--success {
+      background-color: $p-color-theme-light-notification-success;
+    }
+
+    &--disabled {
+      box-shadow: inset 0 0 0 1px $p-color-theme-light-state-disabled;
+    }
+
+    &--error {
+      box-shadow: inset 0 0 0 2px $p-color-theme-light-notification-error;
+    }
+
+    &--success {
+      box-shadow: inset 0 0 0 2px $p-color-theme-light-notification-success;
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: p-rem(24px);
+    height: p-rem(24px);
+    opacity: 0;
+    transition: opacity $p-animation-hover-duration $p-animation-hover-bezier;
+
+    &--checked {
+      opacity: 1;
+    }
+  }
+
   &__message {
     margin-top: $p-spacing-4;
     color: $p-color-theme-light-default;
     transition: color $p-animation-hover-duration $p-animation-hover-bezier;
 
-    &--error {
-      color: $p-color-theme-light-notification-error;
-    }
     &--success {
       color: $p-color-theme-light-notification-success;
+    }
+
+    &--error {
+      color: $p-color-theme-light-notification-error;
     }
   }
 }
